--- a/public/index.html
+++ b/public/index.html
@@ -32,12 +32,12 @@
             <div class="col-sm-9">
                 <p class="text-uppercase">WELCOME TO HOME</p>
                 <table class="table">
-                    <th>
-                        <td>#</td>
-                        <td>Username</td>
-                        <td>Email</td>
-                        <td>Delete</td>
-                    </th>
+                    <tr>
+                        <th>#</th>
+                        <th>Username</th>
+                        <th>Email</th>
+                        <th>Delete</th>
+                    </tr>
                     <tbody id="customer">
 
                     </tbody>
