--- a/public/add-customer.html
+++ b/public/add-customer.html
@@ -31,7 +31,7 @@
             </div>
             <div class="col-sm-9">
               <p class="text-uppercase">Add Data</p>
-                <form role="form" id="frmAddMember">
+                <form action="" role="form" id="frmAddMember">
                     <div class="form-group">
                         <label for="name">Username:</label>
                         <input type="text" class="form-control" id="name" placeholder="username">
